Fixed text overlapping bug in home page

--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -10,7 +10,6 @@ body{
 .container{
     height: 500px;
     width: 500px;
-    border: 1px solid gray;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,19 +17,20 @@ body{
     border-radius: 20px;
     position: relative;
     background-color: #ffffff7e;
+    box-shadow: 0 2px 8px rgba(160, 160, 160, 0.279);
 }
-.container > h1{
-    position: absolute;
-    top: 200px;
+
+h1{
+    font-size: 2.5rem;
 }
 
 .container > a{
-    height: 40px;
+    height: 50px;
     width: 300px;
     background-color: var(--primary);
     color: white;
     padding: 10px 40px; 
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
     text-align: center;
     text-decoration: none;
@@ -41,7 +41,7 @@ body{
     border-radius: 5px;
     font-size: 20px;
     font-weight: 500;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--font1)
 }
 
 /* For responsive*/
